--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.parse:parseui-widget-android:0.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
@@ -26,6 +28,7 @@ dependencies {
     implementation 'com.parse:parse-android:1.17.3'
     implementation 'com.android.support:design:28.0.0-alpha3'
     implementation 'com.jakewharton:butterknife:8.4.0'
+    implementation 'com.android.support:support-v4:28.0.0-alpha3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
