--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,8 @@
         </provider>
 
         <activity android:name=".PostDetails" />
-        <activity android:name=".LandingActivity" />
+        <activity android:name=".LandingActivity"
+            android:launchMode="singleTask"/>
     </application>
 
 </manifest>
